--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
